--- a/src/app/home/components/chart/chart/chart-item/chart-item.component.scss
+++ b/src/app/home/components/chart/chart/chart-item/chart-item.component.scss
@@ -74,7 +74,7 @@
 .parent-node-horizontal {
   display:flex;
   position: relative;
-  width: 100%;
+  max-width: 100%;
   padding-top: 20px;
 }
 
