--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,9 @@ html {
 
 body {
   height: 100%;
+  width: 100vw;
   margin: 0;
+  overflow: overlay;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: $background-image;
